Fix play again button alignment

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,12 @@
+/**
+
+Hey there, looks like you liked this quiz enough to take a peek at the source code.
+Thanks for doing so!
+
+This project was made by Daksh Shah and you can read more about him at https://daksh.me
+
+**/
+
 /* Main style */
 body {
     font-family: 'Open Sans';
@@ -91,10 +100,12 @@ body {
   -webkit-transform: translate(0px, 5px);
   box-shadow: 0px 1px 0px 0px;
 }
+#action-buttons .btn-next {
+    margin-right: 50px;
+}
 .btn-green {
   background-color: #2ecc71;
   box-shadow: 0px 5px 0px 0px #15B358;
-  margin-right: 50px;
 }
 .btn-green:hover {
   background-color: #48E68B;
@@ -119,6 +130,7 @@ body {
     color: white;
     background-color: #55acee;
     box-shadow: 0px 5px 0px 0px #3C93D5;
+    margin-bottom: 20px;
 }
 .continue:hover {
     background-color: #6FC6FF;
@@ -140,4 +152,7 @@ body {
 }
 #finish a {
     color: white;
+}
+#finish .btn-reset {
+    margin-bottom: 20px;
 }
